# gameslog-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  config.toml  drill.yml  feature_ideas.md  gameslog.code-workspace  gameslog.sqlite  gameslog.sqlite-shm  gameslog.sqlite-wal  package.json  pnpm-lock.yaml  roxfile.yml  rust_cli.code-workspace  tailwind.config.js
.github/workflows/: rust.yml
api/: Cargo.toml  gameslog.sqlite
api/src/: database.rs  lib.rs  models.rs  services.rs
assets/: main.css
cli/: Cargo.toml  config.toml
cli/src/: cli.rs  commands.rs  configuration.rs  main.rs
entity/: Cargo.toml
entity/src/: game.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230821_032345_update_game_model.rs
server/: Cargo.toml
server/src/: main.rs  models.rs  services.rs
src/: cli.rs  commands.rs  configuration.rs  database.rs  games_api.rs  games_views.rs  main.rs  models.rs  webserver.rs
src/migrations/: 20230903051649_initial_migration.sql
templates/: base.html  game_list.html  games.html  gameslog.html  hello.html  index.html
webserver/: Cargo.toml
webserver/src/: lib.rs  models.rs
webserver/src/api/: games.rs
