[package]
name = "gameslog"
version = "0.1.0"
authors = ["ThomasLaPiana"]
edition = "2021"
publish = false
default-run = "gameslog"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
anyhow = "1.0.71"
tokio = { version = "1.31.0", features = ["full"] }
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
    "mock",
] }
entity = { path = "./entity" }
migration = { path = "./migration" }
miniserde = "0.1.34"
serde_json = "1.0.105"
askama = "0.12.0"
