[package]
name = "gameslog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.31.0", features = ["full"] }
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
serde_json = "1.0.105"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.183", features = ["derive"] }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
    "mock",
] }
entity = { path = "../entity" }
migration = { path = "../migration" }
